--- a/client/NoWait/src/app/pages/test/test.component.html
+++ b/client/NoWait/src/app/pages/test/test.component.html
@@ -1,4 +1,4 @@
-<div class="w-full h-[--min-main-container] pt-40 ">
+<div class="w-full h-[100vh] pt-40 ">
     <div class="flex-1 md:bg-white flex items-center justify-center w-full">
         <form
             class="py-11  bg-[#E2C30A] w-[300px] md:w-[70%] md:h-[auto] rounded-2xl shadow-2xl flex flex-col items-center justify-center gap-4 md:gap-8 md:z-10">
@@ -6,13 +6,19 @@
             <button (click)="showSearchModal.set(true)"
                 class="block text-white bg-blue-700 hover:bg-blue-400 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800"
                 type="button">
-                Toggle modal
+                Search Modal
+            </button><button (click)="showCart.set(true)"
+                class="block text-white bg-blue-700 hover:bg-blue-400 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800"
+                type="button">
+                Cart Modal
             </button>
         </form>
     </div>
 
-
     <app-search-modal [showModal]="showSearchModal"></app-search-modal>
+
+    <app-shoppping-cart [showModal]="showCart">
+    </app-shoppping-cart>
 </div>
 <!-- {{this.formLogin.errors | json}}
 {{email.errors | json}}
