--- a/client/NoWait/src/app/pages/auth/pages/login/login.component.html
+++ b/client/NoWait/src/app/pages/auth/pages/login/login.component.html
@@ -38,21 +38,21 @@
           <!-- Errores de Contraseña -->
           @if(password.touched && password.errors?.['required']){
           <div
-            class="absolute top-[calc(100%_+_4px)] px-3 py-2 text-sm font-medium rounded-lg shadow-sm  bg-[--warning]">
+            class="absolute top-[calc(100%_+_4px)] px-3 py-2 text-sm font-medium rounded-lg shadow-sm  bg-[--warning] z-10">
             Contraseña Requerido
             <div class="tooltip-arrow before:visible after:hidden -top-1"></div>
           </div>
           }
           @if(password.touched && password.errors?.['minlength'] ){
           <div
-            class="absolute top-[calc(100%_+_4px)] px-3 py-2 text-sm font-medium rounded-lg shadow-sm bg-[--warning]">
+            class="absolute top-[calc(100%_+_4px)] px-3 py-2 text-sm font-medium rounded-lg shadow-sm bg-[--warning] z-10">
             <p>Debe contener minimo 6 caracteres.</p>
             <div class="tooltip-arrow before:visible after:hidden -top-1"></div>
           </div>
           }
           @if(password.touched && password.errors?.['pattern'] ){
           <div
-            class="absolute top-[calc(100%_+_4px)] px-3 py-2 text-sm font-medium rounded-lg shadow-sm  bg-[--warning]">
+            class="absolute top-[calc(100%_+_4px)] px-3 py-2 text-sm font-medium rounded-lg shadow-sm  bg-[--warning] z-10">
             <p>Contraseña debe contener: </p>
             <p>- al menos una minuscula o mayusculas.</p>
             <p>- al menos numero.</p>
@@ -79,7 +79,7 @@
   <!-- Tooltip Spinner -->
   @if (showSpinnerLogin()){
   <div id="toast-simple"
-    class="flex items-center w-full max-w-xs p-4 space-x-4 rtl:space-x-reverse text-gray-500 bg-white divide-x rtl:divide-x-reverse divide-gray-200 rounded-lg dark:text-gray-400 dark:divide-gray-700 space-x dark:bg-gray-800 absolute bottom-[40px] z-50 shadow-sm shadow-gray-400"
+    class="flex items-center w-full max-w-xs p-4 space-x-4 rtl:space-x-reverse text-gray-500 bg-white divide-x rtl:divide-x-reverse divide-gray-200 rounded-lg dark:text-gray-400 dark:divide-gray-700 space-x dark:bg-gray-800 absolute bottom-[40px] z-30 shadow-sm shadow-gray-400"
     role="alert">
     <svg aria-hidden="true" class="w-8 h-8 text-gray-200 animate-spin dark:text-gray-600 fill-blue-600"
       viewBox="0 0 100 101" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -97,7 +97,7 @@
 
   @if(showUnauthorization()){
   <div id="toast-danger"
-    class="flex items-center w-full max-w-xs p-4 text-gray-500 bg-white rounded-lg dark:text-gray-400 dark:bg-gray-800 absolute bottom-[40px] z-50 shadow-sm shadow-gray-400"
+    class="flex items-center w-full max-w-xs p-4 text-gray-500 bg-white rounded-lg dark:text-gray-400 dark:bg-gray-800 absolute bottom-[40px] z-30 shadow-sm shadow-gray-400"
     role="alert">
     <div
       class="inline-flex items-center justify-center flex-shrink-0 w-8 h-8 text-[--warning] bg-red-100 rounded-lg dark:bg-red-800 dark:text-red-200">
