--- a/client/NoWait/src/app/pages/locals/shop.component.html
+++ b/client/NoWait/src/app/pages/locals/shop.component.html
@@ -5,8 +5,18 @@
     </div>
 
     <div class="flex flex-col w-full items-center justify-center gap-6 px-6 mt-4 md:flex-row md:flex-wrap">
-        @for(item of listShops; track $index){  
-            <app-card-shop [item-resul]="item"></app-card-shop>
+        @if (finishSearch()) {
+        <!-- cards de locales-->
+        @for(item of listShops; track $index){
+        <app-card-shop [item-resul]="item"></app-card-shop>
+        }
+        @empty {
+        <!-- TODO: falta maquetar -->
+        <p>No se encontraron Locales</p>
+        }
+        }@else {
+        <!-- TODO: Falta maquetar -->
+        <p>buscando ...</p>
         }
     </div>
 </div>
