--- a/client/NoWait/src/app/app.component.html
+++ b/client/NoWait/src/app/app.component.html
@@ -1,5 +1,5 @@
 <app-navbar></app-navbar>
-<main class="min-h-[--min-main-container] w-full relative pb-[88px] md:pb-0">
+<main class="min-h-[--min-main-container] w-full relative pb-[--space-h-foote] md:pb-0">
 
   <router-outlet></router-outlet>
 </main>
