--- a/client/NoWait/src/app/pages/auth/pages/login/login.component.html
+++ b/client/NoWait/src/app/pages/auth/pages/login/login.component.html
@@ -1,5 +1,5 @@
 <div
-  class="relative bg-[url('assets/login-bg-full.jpeg')] md:bg-none w-full h-[--min-main-container] flex flex-col items-center justify-evenly py-8 md:py-0 md:flex-row-reverse"
+  class="relative bg-[url('assets/login-bg-full.jpeg')] md:bg-none w-full h-[--min-main-container] flex flex-col items-center justify-evenly py-8 md:py-0 md:flex-row-reverse overflow-hidden"
   style="
     background-repeat: no-repeat;
     background-size: cover;
@@ -79,7 +79,7 @@
   <!-- Tooltip Spinner -->
   @if (showSpinnerLogin()){
   <div id="toast-simple"
-    class="flex items-center w-full max-w-xs p-4 space-x-4 rtl:space-x-reverse text-gray-500 bg-white divide-x rtl:divide-x-reverse divide-gray-200 rounded-lg dark:text-gray-400 dark:divide-gray-700 space-x dark:bg-gray-800 absolute bottom-[40px] z-30 shadow-sm shadow-gray-400"
+    class="flex items-center w-full text-yanone max-w-xs p-4 space-x-4 rtl:space-x-reverse text-gray-500 bg-white divide-x rtl:divide-x-reverse divide-gray-200 rounded-lg dark:text-gray-400 dark:divide-gray-700 space-x dark:bg-gray-800 absolute bottom-[40px] z-30 shadow-sm shadow-gray-400"
     role="alert">
     <svg aria-hidden="true" class="w-8 h-8 text-gray-200 animate-spin dark:text-gray-600 fill-blue-600"
       viewBox="0 0 100 101" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -91,12 +91,13 @@
         fill="currentFill" />
     </svg>
     <span class="sr-only">Loading...</span>
-    <div class="ps-4 text-sm font-normal text-gray-700">Cargando</div>
+    <div class="ps-4  font-medium text-[1rem] text-black">Cargando</div>
   </div>
   }
 
-  @if(showUnauthorization()){
-  <div id="toast-danger"
+  <!-- Mensaje de logueo incorrecto -->
+  <!-- @if(showUnauthorization()){ 
+   <div id="toast-danger"
     class="flex items-center w-full max-w-xs p-4 text-gray-500 bg-white rounded-lg dark:text-gray-400 dark:bg-gray-800 absolute bottom-[40px] z-30 shadow-sm shadow-gray-400"
     role="alert">
     <div
@@ -118,6 +119,9 @@
           d="m1 1 6 6m0 0 6 6M7 7l6-6M7 7l-6 6" />
       </svg>
     </button>
+  </div> 
+  } -->
+  <div class="flex absolute bottom-8 z-40 h-min w-min">
+    <app-msn-error [show]="showUnauthorization"></app-msn-error>
   </div>
-  }
 </div>
