--- a/client/NoWait/src/app/pages/test/test.component.html
+++ b/client/NoWait/src/app/pages/test/test.component.html
@@ -1,10 +1,14 @@
 <div class="w-full h-[100vh] pt-40 ">
     <div class="flex-1 bg-transparent flex items-center justify-center w-full">
+
         <div
             class="py-11  bg-[#E2C30A] w-[300px] md:w-[70%] md:h-[auto] rounded-2xl shadow-2xl flex flex-col items-center justify-center gap-4 md:gap-8 md:z-10">
 
             {{ cart()|json }}
 
+            <div>
+                <app-msn-error [show]="showMsnError"></app-msn-error>
+            </div>
             <div>
 
                 @for (item of itemList; track $index) {
