--- a/client/NoWait/src/app/pages/search/components/card-shop/card-shop.component.html
+++ b/client/NoWait/src/app/pages/search/components/card-shop/card-shop.component.html
@@ -1,7 +1,7 @@
 <div class="bg-white w-[360px] h-[130px] flex rounded-lg drop-shadow-xl shadow-lg md:w-[380px] px-4">
     <div>
         <img class="w-[108px] h-[108px] my-[11px] rounded-full object-cover shadow-md shadow-zinc-300"
-            [src]="item.imageUrl" />
+            [src]="item.imageUrl" (error)="errorHandler($event)" />
     </div>
 
     <div class=" mt-[22px] ml-[24px]  w-[155px] h-[68px] ">
